--- a/css/bonsai.css
+++ b/css/bonsai.css
@@ -1,19 +1,39 @@
+@font-face {
+  font-family: 'Amerigo-bt roman opt';
+  src: url('https://db.onlinewebfonts.com/t/ab9e8eea3710ad4417e4a318556bc614.woff2') format('woff2'),
+       url('https://db.onlinewebfonts.com/t/ab9e8eea3710ad4417e4a318556bc614.ttf') format('truetype');
+  font-style: normal;
+  font-weight: normal;
+}
+
 :root {
     font-size: 16px;
     --primary-color: #00b289;
     --secondary-font-family: 'Proximanova opt', sans-serif;
     --secondary-font-color: #4c525a;
+    line-height: 16px;
 }
 
 body {
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
 
     height: 100vh;
     overflow: auto;
     box-sizing: border-box;
+    max-width: 1200px;
 }
+main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
+    box-sizing: border-box;
+    padding: 0.7rem 6.5rem;
+
+    width: 100%;
+
+}
 header {
     padding: 0.7rem 6.5rem;
 }
@@ -117,18 +137,93 @@ nav,
     background-color: #068567;
 }
 .backdrop-container{
-    box-sizing: border-box;
-    overflow:hidden;
-
+    position: absolute;
 }
 .backdrop-blue {
-    height: 180vh;
-    width: 70vw;
+    height: 100rem;
+    width: 200rem;
 
     background-color: var(--primary-color);
     opacity: 0.18;
 
     transform: translate(270px, -590px) rotate(-40.5deg);
 
-    z-index: -1;
+    z-index: -10;
+}
+
+.pricing-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    box-sizing: border-box;
+    position: relative;
+    
+    width: 100%;
+
+}
+
+.pricing-top, 
+.option-toggle-wrapper{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.pricing-top{
+    width: 100%;
+    /* margin: 3rem 5rem 0; */
+    padding: 0 3rem;
+    overflow: hidden;
+}
+
+.primary-text{
+    box-sizing: border-box;
+    color: var(--secondary-font-color);
+    font-size: 2.5rem;
+    font-family: 'Amerigo-bt roman opt', sans-serif;
+    padding: 0;
+    margin: 0;
+    line-height: 2.5rem;
+}
+.option-toggle-wrapper{
+    width: 30%;
+    justify-content: space-between;
+
+}
+.option-toggle-monthly{
+    font-size: 1.063rem;
+    color: var(--secondary-font-color);
+}
+.option-toggle-yearly{
+    font-size: 1rem;
+    color: #4c525a;
+}
+.pricing-card-wrapper{
+    display: flex;
+    justify-content: space-between;
+    align-items: stretch;
+
+    box-sizing: border-box;
+    gap: 1rem;
+    width: 100%;
+
+    padding: 2rem 0rem;
+}
+.pricing-card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    flex: 1;
+
+    /* height: 5rem; */
+    background-color: #fbfcff;
+
+    /* border: 1px solid;  */
+    box-shadow: 0 0 68px rgba(2,4,69,.08);
+    border-radius: 0.2em;
+
+
 }
