--- a/static-frontend/css/bonsai.css
+++ b/static-frontend/css/bonsai.css
@@ -6,29 +6,42 @@
     font-weight: normal;
 }
 
+@font-face {
+    font-family: 'Proxima Nova';
+    src: url('../fonts/Fontspring-DEMO-proximanova-regular.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
+  }
+  
+
 :root {
     font-size: 16px;
     --primary-color: #00b289;
-    --secondary-font-family: 'Proximanova opt', sans-serif;
+    --secondary-font-family: 'Proxima Nova', sans-serif;
     --secondary-font-color: #4c525a;
     line-height: 16px;
 }
 
 body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;;
     position: relative;
     overflow: hidden;
 
-    margin: 0 auto;
+    margin: 0;
     padding: 0;
 
     height: 100vh;
     overflow: auto;
     box-sizing: border-box;
-    max-width: 1200px;
 }
 
 main {
+    max-width: 1200px;
+
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 
@@ -40,18 +53,22 @@ main {
 }
 
 header {
+    max-width: 100vw;
+
     padding: 0.7rem 6.5rem;
+
     background-color: white;
     width: 100%;
     position: relative;
     z-index: 1;
     box-sizing: border-box;
+    margin: 0 auto;
 }
 
 nav {
-    /* position: relative; */
-    /* top: 0; */
-    /* z-index: 100; */
+    margin: 0 auto;
+    
+    max-width: 1000px;
     flex-wrap: wrap;
 }
 
@@ -68,7 +85,6 @@ nav,
 .site-logo {
     height: 1.8rem;
     width: auto;
-    margin-right: 8rem;
 }
 
 .nav-links {
@@ -77,7 +93,6 @@ nav,
     font-size: 0.9rem;
     font-family: var(--secondary-font-family);
 
-    padding-right: 1rem;
     gap: 1.2rem;
 }
 
@@ -120,6 +135,8 @@ nav,
     border: 1px solid var(--primary-color);
     border-radius: 0.2rem;
 
+    font-size: 0.8rem;
+
     transition: background-color 0.1s;
 }
 
@@ -135,6 +152,8 @@ nav,
     background-color: var(--primary-color);
     color: white;
 
+    font-size: 0.8rem;
+
     padding: 0.1rem 1rem;
     border: 1px solid var(--primary-color);
     border-radius: 0.2rem;
@@ -142,27 +161,29 @@ nav,
     transition: background-color 0.1s;
 }
 
-.start-button:hover, .pc-start:hover {
+.start-button:hover,
+.pc-start:hover {
     background-color: #068567;
 }
 
 .backdrop-container {
     position: absolute;
-    overflow: hidden;
+    /* overflow: hidden; */
     width: 100%;
 }
 
 .backdrop-blue {
-    height: 88rem;
-    width: 80rem;
+    height: 80rem;
+    width: 700rem;
 
     background-color: var(--primary-color);
     opacity: 0.08;
 
-    transform: translate(8rem, -30rem) rotate(-40.5deg);
+    transform: translate(-40rem, -235em) rotate(-40.5deg);
     z-index: -10;
 
-    border-radius: 12rem;
+    /* border-radius: 12rem; */
+    border-bottom-left-radius: 12rem;
 }
 
 .pricing-container {
@@ -186,29 +207,33 @@ nav,
     flex-wrap: wrap;
 }
 
-.switch{
+.switch {
     position: relative;
     display: inline-block;
     width: 3.1rem;
     height: 1.5rem;
 }
 
-.switch input{
+.switch input {
     opacity: 0;
     width: 0;
     height: 0;
 }
 
-.slider{
-    position:absolute;
+.slider {
+    position: absolute;
     cursor: pointer;
-    top: 0; left: 0; right: 0; bottom: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     background-color: var(--primary-color);
     transition: 0.4s;
     border-radius: 1.8rem;
 }
-.slider::before{
-    position:absolute;
+
+.slider::before {
+    position: absolute;
     content: "";
     height: 1.1rem;
     width: 1.1rem;
@@ -219,17 +244,18 @@ nav,
     border-radius: 50%;
 }
 
-input:checked + .slider{
+input:checked+.slider {
     background-color: var(--primary-color);
 }
-input:checked + .slider::before{
-    transform:translateX(1.6rem);
+
+input:checked+.slider::before {
+    transform: translateX(1.6rem);
 }
 
 .pricing-top {
     width: 100%;
 
-    padding: 0 3rem;
+    /* padding: 0 3rem; */
     overflow: hidden;
 }
 
@@ -284,7 +310,7 @@ input:checked + .slider::before{
     background-color: #fbfcff;
 
     box-shadow: 0 0 68px rgba(2, 4, 69, .08);
-    border-radius: 0.2em;
+    border-radius: 0.2rem;
 
     padding: 3.4rem 2.2rem;
 
@@ -293,17 +319,44 @@ input:checked + .slider::before{
 
 }
 
+.professional-card {
+    position: relative;
+    box-sizing: border-box;
+    overflow: hidden;
+}
+
+.most-popular-strip {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 100%;
+    height: 2rem;
+
+    font-family: var(--secondary-font-family);
+    font-weight: bold;
+
+    color: white;
+    background-color: var(--primary-color);
+
+    position: absolute;
+    top: 2.6rem;
+    right: -6.5rem;
+
+
+    transform: rotate(45.5deg);
+}
+
 .pc-title {
     width: 90%;
 
     font-family: var(--secondary-font-family);
     font-size: 1.4rem;
-    font-weight: 550;
+    font-weight: bold;
 
     line-height: 1.8rem;
-
     color: var(--secondary-font-color);
-
+    padding-bottom: 0.5rem;
 }
 
 .pc-description {
@@ -329,23 +382,25 @@ input:checked + .slider::before{
 
     border-bottom: #00b289 solid 0.11rem;
     min-width: 80%;
-    padding: 0.5rem 0 0 0 ;
+    padding: 0.5rem 0 0 0;
 }
+
 .currency-symbol {
     font-size: 1.7rem;
     font-weight: 600;
-    
-    align-self: flex-start; 
-    padding-top: 0.8rem ;
+
+    align-self: flex-start;
+    padding-top: 0.8rem;
 }
 
-.amount{
-    padding:0 0 0 0.5rem;
+.amount {
+    padding: 0 0 0 0.5rem;
     font-size: 3.8rem;
 
     line-height: 3.8rem;
 }
-.time-period{
+
+.time-period {
     line-height: 1.5rem;
     align-self: flex-end;
     padding-left: 0.5rem;
@@ -374,19 +429,20 @@ input:checked + .slider::before{
 
     color: #4c4d5f;
 }
-.pc-start{
+
+.pc-start {
     display: flex;
     justify-content: center;
     align-items: center;
-    
+
     min-height: 3.4rem;
     min-width: 100%;
-    margin:auto 0 0 0 ;
+    margin: auto 0 0 0;
 
     border: 1px solid var(--primary-color);
     border-radius: 0.2rem;
 
-    font-size: 0.65rem;
+    font-size: 0.8rem;
     font-weight: 700;
     font-family: var(--secondary-font-family);
 
@@ -426,4 +482,75 @@ input:checked + .slider::before{
 
 .active {
     display: block;
+}
+.add-on-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    box-sizing: border-box;
+
+    margin: 4.2rem 0 0 0;
+
+}
+.add-on-title{
+    line-height: 2rem;
+
+    font-size: 2rem;
+    font-family: 'Amerigo-bt roman opt';
+    
+    color: var(--secondary-font-color);
+    margin-bottom: 2.5rem;
+}
+.add-on-card-wrapper{
+    display: flex;
+    flex-direction: column;
+
+    min-width: 1000px;
+    max-width: 1200px;
+    box-sizing: border-box;
+    gap: 1rem;
+
+}
+
+.add-on-card{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    padding: 2rem 3rem;
+
+    line-height: 1.5rem;
+
+    box-shadow: 0 0 68px rgba(2, 4, 69, .08);
+    border-radius: 0.2rem ;
+
+    font-family: var(--secondary-font-family);
+}
+
+.add-on-card-text{
+    display: flex;
+    flex-direction: column;
+}
+
+.add-on-card-title{
+    color: var(--secondary-font-color);
+
+    font-size: 1.37rem;
+    font-weight: bold;
+}
+
+.add-on-card-description{
+    color: var(--secondary-font-color);
+    font-size: 1rem;
+}
+
+.add-on-card-price{
+    color: var(--secondary-font-color);
+    font-size: 1.6rem;
+    font-weight: bold;
+
+    display: flex ;
+    justify-content: center;
+    align-self: center;
 }
